Aiming And Idle Animations Working

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,8 +175,9 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -184,7 +185,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -207,6 +207,8 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
+OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP.Carp_AnimBP
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1005,6 +1007,12 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+AnimGraphNode_StateResult.Functions=True
+AnimGraphNode_StateResult.Tag=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+AnimationTransitionGraph.Graph=True
+AnimationTransitionGraph.GraphBlending=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1020,7 +1028,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -2485,18 +2493,22 @@ ControlRigEulerTransformControlProxy="\"Object.Control.Transform\" "
 ControlRigControlsProxy="\"Object.Control.Transform\" "
 ClothingAssetCommon="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs.ClothConfigs[1]\" \"Object.Config.ClothConfigs.ClothConfigs[1].Object.Simulation\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" \"Object.Config.ClothConfigs.ClothConfigs[1]\" \"Object.Config.ClothConfigs.ClothConfigs[1].Object.Simulation\" "
+AnimGraphNode_StateResult="\"Object.Functions.Functions|State\" "
+AnimGraphNode_Base=
+K2Node=
+EdGraphNode=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_3_Mat
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/bottle_whiskey
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem6=/Game/_Level/_Blueprints/woodBP
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem8=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
-MRUItem9=/Game/_Core/_Player/IF_Character
+MRUItem0=/Game/_Core/_Player/IF_Character
+MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_3_Mat
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/bottle_whiskey
+MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem8=/Game/_Level/_Blueprints/woodBP
+MRUItem9=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
 MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim_Montage
 MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
 MRUItem12=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
@@ -2519,7 +2531,7 @@ MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Axe_Slash
 MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
