--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -133,6 +133,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
 NewWindowHeight=992
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -177,15 +178,15 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -209,6 +210,9 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=LevelSequenceEditor
 OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP.Carp_AnimBP
 OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
+OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive
+OpenAssetsAtExit=/Game/_Level/_Blueprints/woodBP.woodBP
+OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen.BP_Kronen
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1013,6 +1017,11 @@ AnimGraphNode_Base.Functions=True
 AnimGraphNode_Base.Tag=True
 AnimationTransitionGraph.Graph=True
 AnimationTransitionGraph.GraphBlending=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1028,7 +1037,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -2499,16 +2508,16 @@ K2Node=
 EdGraphNode=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/IF_Character
-MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_3_Mat
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/bottle_whiskey
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem8=/Game/_Level/_Blueprints/woodBP
-MRUItem9=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
+MRUItem0=/Game/_Core/_Enemies/Kronen_Male_001/BP_Kronen
+MRUItem1=/Game/_Level/_Blueprints/woodBP
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem3=/Game/_Core/_Player/IF_Character
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_3_Mat
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_1_Mat
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Outside/bottle_whiskey
 MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_BigGun_Shoot_Anim_Montage
 MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
 MRUItem12=/Game/_Level/_LevelAssets/_OGFiles/skin_nasty_version2_M
