Scaled Char back up

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,6 +180,7 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -206,7 +207,6 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=LevelSequenceEditor
-RecentAssetEditors=LevelSequenceEditor
 OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy
 OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy.BHT_Enemy
 OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main.Enemy_CTR_Main
@@ -220,6 +220,7 @@ OpenAssetsAtExit=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM.BTTASK_ROA
 OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Charger.BP_Charger
 OpenAssetsAtExit=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner.EnnemySpawner
 OpenAssetsAtExit=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer.Random_ESpanwer
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3088,36 +3089,36 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Random_ESpanwer_C="\"Object.Default.Ennemy\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
-MRUItem1=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
-MRUItem2=/Game/_Core/_Enemies/BP_Charger
-MRUItem3=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM
-MRUItem4=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
-MRUItem5=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
-MRUItem6=/Game/_Core/_Enemies/BP_Kronen
-MRUItem7=/Game/_Core/_Enemies/_Animations/BS_Slugger
-MRUItem8=/Game/_Core/_Enemies/_Animations/ABP_Sluger
-MRUItem9=/Game/_Core/_Enemies/_Animations/BS_KFemale
-MRUItem10=/Game/_Core/_Enemies/_Animations/ABP_KrononeFemale
-MRUItem11=/Game/_Core/_Enemies/_Animations/ABP_KFast
-MRUItem12=/Game/_Core/_Enemies/_Animations/BS_KFast
-MRUItem13=/Game/_Core/_Enemies/_Animations/BS_Charger
-MRUItem14=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
-MRUItem15=/Game/_Core/_Enemies/_Animations/ABP_Charger
-MRUItem16=/Game/_Core/_Enemies/_Animations/BS_Kronon
-MRUItem17=/Game/_Core/_Enemies/BP_KronenFast
-MRUItem18=/Game/_Core/_Enemies/BP_Slugger
-MRUItem19=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem20=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
-MRUItem21=/Game/_Core/Libraries/BP_FunctionLib
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
-MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Reload
-MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim
-MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Reload
-MRUItem26=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem27=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonWhack1
-MRUItem28=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkelMesh
-MRUItem29=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Aim
+MRUItem0=/Game/_Core/_Player/IF_Character
+MRUItem1=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
+MRUItem2=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
+MRUItem3=/Game/_Core/_Enemies/BP_Charger
+MRUItem4=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM
+MRUItem5=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
+MRUItem6=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
+MRUItem7=/Game/_Core/_Enemies/BP_Kronen
+MRUItem8=/Game/_Core/_Enemies/_Animations/BS_Slugger
+MRUItem9=/Game/_Core/_Enemies/_Animations/ABP_Sluger
+MRUItem10=/Game/_Core/_Enemies/_Animations/BS_KFemale
+MRUItem11=/Game/_Core/_Enemies/_Animations/ABP_KrononeFemale
+MRUItem12=/Game/_Core/_Enemies/_Animations/ABP_KFast
+MRUItem13=/Game/_Core/_Enemies/_Animations/BS_KFast
+MRUItem14=/Game/_Core/_Enemies/_Animations/BS_Charger
+MRUItem15=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
+MRUItem16=/Game/_Core/_Enemies/_Animations/ABP_Charger
+MRUItem17=/Game/_Core/_Enemies/_Animations/BS_Kronon
+MRUItem18=/Game/_Core/_Enemies/BP_KronenFast
+MRUItem19=/Game/_Core/_Enemies/BP_Slugger
+MRUItem20=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
+MRUItem22=/Game/_Core/Libraries/BP_FunctionLib
+MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Reload
+MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim
+MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Reload
+MRUItem27=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
+MRUItem28=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkeletonWhack1
+MRUItem29=/Game/_Core/_Weapons/AR_rifle/Weapon_Rifle_SkelMesh
 
 [MessageLog]
 LastLogListing=PIE
