Changed stuff with Weapon cycle

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=992)
 LastExecutedLaunchDevice=Windows@DRAGON3DINTERAC
 LastExecutedLaunchName=DRAGON3DINTERAC
 LastExecutedPIEPreviewDevice=
@@ -133,7 +133,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=1914
 NewWindowHeight=992
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -175,8 +175,15 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -193,7 +200,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -201,12 +207,7 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -844,6 +845,7 @@ Landscape.Input=True
 Landscape.Actor=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
@@ -1527,7 +1529,48 @@ Random_ESpanwer_C.WorldPartition=True
 Random_ESpanwer_C.Events=True
 Random_ESpanwer_C.TransformCommon=True
 Random_ESpanwer_C.Networking=True
-Texture2D.Interchange =True
+Invetory_C.Variable=True
+Invetory_C.Sockets=True
+Invetory_C.Default=True
+Invetory_C.Tags=True
+Invetory_C.ComponentTick=True
+Invetory_C.ComponentReplication=True
+Invetory_C.Activation=True
+Invetory_C.Cooking=True
+Invetory_C.Events=True
+Shotgun_C.Default=True
+Shotgun_C.Tick=True
+Shotgun_C.Replication=True
+Shotgun_C.Rendering=True
+Shotgun_C.Collision=True
+Shotgun_C.Actor=True
+Shotgun_C.Input=True
+Shotgun_C.HLOD=True
+Shotgun_C.Physics=True
+Shotgun_C.WorldPartition=True
+Shotgun_C.Events=True
+Rifle_C.Default=True
+Rifle_C.Tick=True
+Rifle_C.Replication=True
+Rifle_C.Rendering=True
+Rifle_C.Collision=True
+Rifle_C.Actor=True
+Rifle_C.Input=True
+Rifle_C.HLOD=True
+Rifle_C.Physics=True
+Rifle_C.WorldPartition=True
+Rifle_C.Events=True
+Axe_C.Default=True
+Axe_C.Tick=True
+Axe_C.Replication=True
+Axe_C.Rendering=True
+Axe_C.Collision=True
+Axe_C.Actor=True
+Axe_C.Input=True
+Axe_C.HLOD=True
+Axe_C.Physics=True
+Axe_C.WorldPartition=True
+Axe_C.Events=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1543,7 +1586,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Bulky
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -2926,6 +2969,11 @@ None=======
 /Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk.Kronen_Bulk=1
 /Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth.Kronen_Bulk_Mouth=1
 /Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton.Enemy_Kronen_Bulk_Skeleton=1
+/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu.WGP_IF_ItemMenu=1
+/Game/_Core/_Weapons/Axe.Axe=1
+/Game/_Core/_Weapons/Rifle.Rifle=1
+/Game/_Core/_Weapons/Shotgun.Shotgun=1
+/Game/_Core/_Player/_INV_System/Invetory.Invetory=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3041,7 +3089,7 @@ K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableG
 BP_Kronen_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_Slugger1_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
-SkeletalMeshComponent=
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_Slugger_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_KronenFemale_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_Charger_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
@@ -3064,11 +3112,17 @@ ArrowComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.D
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 Random_ESpanwer_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 IF_Character_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+Invetory_C=
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+K2Node_Tunnel=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+K2Node=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+K2Node_EnhancedInputAction=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 
 [DetailPropertyExpansion]
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[7]\" "
 DeveloperSettings=
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[10]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -3096,39 +3150,39 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Random_ESpanwer_C="\"Object.Default.Ennemy\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton
-MRUItem1=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth_Alpha
-MRUItem2=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth_DM
-MRUItem3=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
-MRUItem4=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth
-MRUItem5=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_M
-MRUItem7=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
-MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
-MRUItem9=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Death
-MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_GetUp
-MRUItem11=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Hurt
-MRUItem12=/Game/_Core/_Player/IF_Character
-MRUItem13=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
-MRUItem14=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
-MRUItem15=/Game/_Core/_Enemies/BP_Charger
-MRUItem16=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM
-MRUItem17=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
-MRUItem18=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
-MRUItem19=/Game/_Core/_Enemies/BP_Kronen
-MRUItem20=/Game/_Core/_Enemies/_Animations/BS_Slugger
-MRUItem21=/Game/_Core/_Enemies/_Animations/ABP_Sluger
-MRUItem22=/Game/_Core/_Enemies/_Animations/BS_KFemale
-MRUItem23=/Game/_Core/_Enemies/_Animations/ABP_KrononeFemale
-MRUItem24=/Game/_Core/_Enemies/_Animations/ABP_KFast
-MRUItem25=/Game/_Core/_Enemies/_Animations/BS_KFast
-MRUItem26=/Game/_Core/_Enemies/_Animations/BS_Charger
-MRUItem27=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
-MRUItem28=/Game/_Core/_Enemies/_Animations/ABP_Charger
-MRUItem29=/Game/_Core/_Enemies/_Animations/BS_Kronon
+MRUItem0=/Game/_Core/_Player/IF_Character
+MRUItem1=/Game/_Core/_Weapons/Axe
+MRUItem2=/Game/_Core/_Weapons/Rifle
+MRUItem3=/Game/_Core/_Weapons/Shotgun
+MRUItem4=/Game/_Core/_Player/_INV_System/Invetory
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem6=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
+MRUItem7=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton
+MRUItem8=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth_Alpha
+MRUItem9=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth_DM
+MRUItem10=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
+MRUItem11=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth
+MRUItem12=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_M
+MRUItem14=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
+MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Death
+MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_GetUp
+MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Hurt
+MRUItem19=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
+MRUItem20=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
+MRUItem21=/Game/_Core/_Enemies/BP_Charger
+MRUItem22=/Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM
+MRUItem23=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
+MRUItem24=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
+MRUItem25=/Game/_Core/_Enemies/BP_Kronen
+MRUItem26=/Game/_Core/_Enemies/_Animations/BS_Slugger
+MRUItem27=/Game/_Core/_Enemies/_Animations/ABP_Sluger
+MRUItem28=/Game/_Core/_Enemies/_Animations/BS_KFemale
+MRUItem29=/Game/_Core/_Enemies/_Animations/ABP_KrononeFemale
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3556,4 +3610,96 @@ ChangeVariableType_Warning=False
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
