--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,8 +176,20 @@ MRUItem1=/Game/_Level/DemoMap
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -196,23 +208,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Charger.BP_Charger
-OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Kronen.BP_Kronen
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_IdleWhack_Anim.Carpenter_Shotgun_IdleWhack_Anim
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1708,7 +1703,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/_Charger
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -2993,9 +2988,9 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/_Player/IF_Character.IF_Character=1
@@ -3107,6 +3102,13 @@ None=======
 /Game/_Core/Item_sounds/Item_grab.Item_grab=1
 /Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit=1
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage.Carpenter_Axe_Slash_Anim_Montage=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_PhysicsAsset.Enemy_Kronen_Bulk_PhysicsAsset=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk.Enemy_Kronen_Bulk=1
+/Game/_Core/_Enemies/_Charger/Moose_Tent_M.Moose_Tent_M=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Heal.Carpenter_Heal=1
+/Game/_Core/_Enemies/_Charger/Moose_Antler_DM.Moose_Antler_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Body_DM.Moose_Body_DM=1
+/Game/_Core/_Enemies/_Charger/Enemy_Charger.Enemy_Charger=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3229,7 +3231,7 @@ BP_Charger_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.Def
 K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 BP_KronenFast_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 Boat_C=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
-SceneComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+SceneComponent=
 ABP_KrononeFemale_C=
 AnimGraphNode_BlendSpacePlayer=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 AIPerceptionComponent=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
@@ -3256,6 +3258,7 @@ BoneProxy=BoneProxy.Transforms.Mesh Relative,BoneProxy.Transforms.Reference,Bone
 AnimBlueprint=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 Character=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
+Landscape=K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.Textures
 
 [DetailPropertyExpansion]
 RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0]\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties\" \"Object.Device Configurations.DeviceConfigurations.DeviceConfigurations[0].AxisProperties.AxisProperties[7]\" "
@@ -3294,36 +3297,36 @@ AnimGraphNode_AssetPlayerBase="\"Object.Settings.Node.PlayRateScaleBiasClampCons
 IF_Character_C=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/BP_Charger
-MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_IdleWhack_Anim
-MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Idle_Anim
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
-MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/SlashAM
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/Carpenter_Knife_Idle_Anim
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem8=/Game/_Core/_Player/IF_Character
-MRUItem9=/Game/_Core/_Enemies/BP_Kronen
-MRUItem10=/Game/_Core/Item_sounds/Item_grab
-MRUItem11=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige
-MRUItem12=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit
-MRUItem13=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
-MRUItem14=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
-MRUItem15=/Game/_Core/_Enemies/Kronen_Male/Kronen_Male1
-MRUItem16=/Game/_Core/_Enemies/Kronen_Male/Kronen_Model_01
-MRUItem17=/Game/_Core/_Player/_Assets/Carpenter_Char_PhysicsAsset
-MRUItem18=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
-MRUItem19=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
-MRUItem20=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Idle_Anim
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
-MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Reload_Anim
-MRUItem24=/Game/_Core/_Weapons/Axe
-MRUItem25=/Game/_Core/_Weapons/Rifle
-MRUItem26=/Game/_Core/_Weapons/Shotgun
-MRUItem27=/Game/_Core/_Player/_INV_System/Invetory
-MRUItem28=/Game/_Core/_Player/_Widgets/_Widgets/WGP_IF_ItemMenu
-MRUItem29=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton
+MRUItem0=/Game/_Core/_Enemies/_Charger/Enemy_Charger
+MRUItem1=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
+MRUItem2=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Heal
+MRUItem4=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim
+MRUItem5=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_Mouth
+MRUItem6=/Game/_Core/_Enemies/_Charger/Moose_Tent_M
+MRUItem7=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk
+MRUItem8=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
+MRUItem9=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
+MRUItem10=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_PhysicsAsset
+MRUItem11=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton
+MRUItem12=/Game/_Core/_Enemies/BP_Charger
+MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_IdleWhack_Anim
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Idle_Anim
+MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
+MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/SlashAM
+MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/Carpenter_Knife_Idle_Anim
+MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem20=/Game/_Core/_Player/IF_Character
+MRUItem21=/Game/_Core/_Enemies/BP_Kronen
+MRUItem22=/Game/_Core/Item_sounds/Item_grab
+MRUItem23=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige
+MRUItem24=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit
+MRUItem25=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
+MRUItem26=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem27=/Game/_Core/_Enemies/Kronen_Male/Kronen_Male1
+MRUItem28=/Game/_Core/_Enemies/Kronen_Male/Kronen_Model_01
+MRUItem29=/Game/_Core/_Player/_Assets/Carpenter_Char_PhysicsAsset
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3441,7 +3444,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
