--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -178,6 +178,7 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -207,7 +208,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1961,7 +1961,7 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male_001
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/NPCs/Ferry_Man
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Bulky
 None=======
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
@@ -3248,8 +3248,8 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorToolkitTabLocation]
@@ -3384,6 +3384,7 @@ None=======
 /Game/_Core/NPCs/Ferry_Man/Ferry_Man.Ferry_Man=1
 /Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001.Old_Man_001=1
 /Game/_Core/NPCs/The_Old_Man/The_Old_Man.The_Old_Man=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Death_Anim.Enemy_Kronen_Bulk_Death_Anim=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3592,36 +3593,36 @@ StreamableRenderAsset=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
-MRUItem1=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
-MRUItem2=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
-MRUItem3=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
-MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
-MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
-MRUItem9=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
-MRUItem10=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingShotgun
-MRUItem11=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
-MRUItem12=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
-MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem14=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingAR
-MRUItem15=/Game/_Core/_Weapons/Shotgun
-MRUItem16=/Game/_Core/_Weapons/Rifle
-MRUItem17=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
-MRUItem18=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagAR
-MRUItem19=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagPis
-MRUItem20=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
-MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
-MRUItem22=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
-MRUItem23=/Game/_PlaceHolderts/bullets/pistol_ammo_shell
-MRUItem24=/Game/_Core/_Player/_Inputs/_IMP/AllMayorKeyInputs
-MRUItem25=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Death
-MRUItem26=/Game/_Core/_Player/_Assets/Carpenter_Char_PhysicsAsset
-MRUItem27=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
-MRUItem28=/Game/_Level/_LevelAssets/_Environment_Assets/wall/broken_wall_
-MRUItem29=/Game/_Core/_Player/IF_Character
+MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem1=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
+MRUItem2=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
+MRUItem3=/Game/_Core/NPCs/Ferry_Man/Textures/Ferry_Man1
+MRUItem4=/Game/_Core/NPCs/Ferry_Man/Ferry_Man
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Shotgun_Shoot
+MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
+MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Rifle_Shoot
+MRUItem9=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
+MRUItem10=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Pistol_Shoot
+MRUItem11=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingShotgun
+MRUItem12=/Game/_Core/_Player/_Assets/Carpenter_Char_Skeleton
+MRUItem13=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem15=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingAR
+MRUItem16=/Game/_Core/_Weapons/Shotgun
+MRUItem17=/Game/_Core/_Weapons/Rifle
+MRUItem18=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
+MRUItem19=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagAR
+MRUItem20=/Game/_Core/_Weapons/AmmoToSpawn/_Mags/MagPis
+MRUItem21=/Game/_Core/_Weapons/AmmoToSpawn/BullitShot
+MRUItem22=/Game/_Core/_Weapons/AmmoToSpawn/BullitPist
+MRUItem23=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
+MRUItem24=/Game/_PlaceHolderts/bullets/pistol_ammo_shell
+MRUItem25=/Game/_Core/_Player/_Inputs/_IMP/AllMayorKeyInputs
+MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Death
+MRUItem27=/Game/_Core/_Player/_Assets/Carpenter_Char_PhysicsAsset
+MRUItem28=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim_Montage
+MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/wall/broken_wall_
 
 [MessageLog]
 LastLogListing=FBXImport
